profile-details need to fix overflow tabs

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -597,18 +597,18 @@ blockquote {
     font-size: 12px;
 }
 
-.card.large-card .card-author .card-roduct-rating{
-    margin-right: 10px;
+.card-roduct-rating{
     font-size: 12px;
     font-weight: 400;
     color:#ffa726;
 }
 
+.card.large-card .card-author .card-roduct-rating{
+    margin-right: 10px;
+}
+
 .card.medium-card .card-author .card-roduct-rating{
     margin-right: 10px;
-    font-size: 12px;
-    font-weight: 400;
-    color:#ffa726;
 }
 
 .card.large-card .card-item-title{
@@ -1774,4 +1774,150 @@ th{
 
 .profile-details-wrap .default-sprites-social{
     margin-bottom: 25px;
+}
+
+.profile-details-wrap .btn-block + .btn-block{
+    margin-top: 15px;
+}
+
+.profile-details-wrap  .profile-details-nav{
+    border: 1px solid #d7d7d7;
+    background-color: #fff;
+}
+
+.profile-details-wrap  .profile-details-nav li{
+    padding: 15px 15px 15px 20px;
+    border-bottom: 1px solid #d7d7d7;
+    color: #707070;
+}
+
+.profile-details-wrap  .profile-details-nav li a:hover {
+    color: #bebcbc;
+}
+
+.profile-details-wrap  .profile-details-nav li.active{
+    border-bottom: 2px solid #8bc34a;
+    color: #263238;
+}
+
+.profile-details-wrap  .profile-details-nav li i{
+    margin-right: 12px;
+    color:#d0d0d0;
+}
+
+.profile-details-wrap  .profile-details-nav li.active i{
+    color: #8bc34a;
+}
+
+.profile-details-wrap .banner{
+    padding: 20px;
+    border: 1px solid #dfdfdf;
+    background: #ffffff;
+    margin-bottom: 30px;
+}
+
+.profile-details-wrap .author-summary {
+    background: #ffffff;
+    border: 1px solid #d7d7d7;
+    margin-bottom: 30px;
+}
+
+.profile-details-wrap .author-summary .single-item{
+    padding: 25px 0;
+    text-align: center;
+    margin: auto;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    border-right: 1px solid #d7d7d7;
+}
+
+.profile-details-wrap .author-summary .single-item .item-title{
+    color: #263238;
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.profile-details-wrap .author-summary .single-item .item-details{
+    color:#707070;
+}
+
+.profile-details-wrap .item-details ul li{
+}
+
+.profile-details-wrap .item-details ul .rating-count{
+    color: #263238;
+    margin-left: 8px;
+}
+
+.profile-details-wrap .tabs-wrapper-content{
+    background: #ffffff;
+    padding: 30px 35px;
+    border: 1px solid #d7d7d7;
+}
+
+/*title tab*/
+.profile-tab-title{
+    margin-bottom: 30px;
+}
+
+.profile-tab-title span{
+    font-size: 20px;
+    font-weight: 700;
+    color: #263238;
+    line-height: 24px;
+}
+/*все*/
+
+.profile-details-wrap .tabs-wrapper-content .tab-item .tab-content p{
+    font-size: 15px;
+    font-weight: 400;
+    color: #707070;
+}
+
+.profile-details-wrap .tabs-wrapper-content .skills{
+    margin-top: 45px;
+}
+
+.profile-details-wrap .tabs-wrapper-content .skill-area + .skill-area{
+    margin-top: 22px;
+}
+
+.profile-details-wrap .tabs-wrapper-content .skill-area .lead{
+    font-size: 16px;
+}
+
+.profile-details-wrap .tabs-wrapper-content .skill-area .lead span:first-child{
+    font-weight: 500;
+}
+
+.profile-details-wrap .tabs-wrapper-content .skill-progress .progress-wrap{
+    width: 100%;
+    height: 15px;
+    background-color: rgba(0,0,0, .05);
+    margin-top: 17px;
+    border-radius: 4px;
+}
+
+.profile-details-wrap .tabs-wrapper-content .skill-progress .progress-wrap .progress-bar{
+    background-color: rgba(181,181,181, 1);
+    width: 0%;
+    height: 15px;
+    border-radius: 4px;
+}
+.profile-details-wrap .tabs-wrapper-content .skill-progress .progress-wrap .progress-bar.design{
+    width: 80%;
+}
+
+.profile-details-wrap .tabs-wrapper-content .skill-progress .progress-wrap .progress-bar.wordpress{
+    width: 90%;
+}
+
+.profile-details-wrap .tabs-wrapper-content .skill-progress .progress-wrap .progress-bar.joomla{
+    width: 70%;
+}
+
+#tabs{
+    overflow: hidden;
 }
